[package]
name = "guerrilla"
version = "0.0.0"
description = "Guerrilla or Monkey patching in Rust for (unstable) fun and profit."
license = "MIT/Apache-2.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]

[target.'cfg(any(unix, macos))'.dependencies]
libc = "0.2.43"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [ "memoryapi" ] }

[dev-dependencies]
chrono = "0.4"
